hphp/hack/test/typecheck/array/disallow_darray_where_vector_like_array_is_required.php.exp
File "disallow_darray_where_vector_like_array_is_required.php", line 4, characters 10-31:
Invalid return type (Typing[4110])
  File "disallow_darray_where_vector_like_array_is_required.php", line 3, characters 18-31:
  Expected `vec<string>`
  File "disallow_darray_where_vector_like_array_is_required.php", line 4, characters 10-31:
  But got `dict<string, int>` because legacy arrays have been unified with Hack arrays
